@@ -412,7 +412,8 @@ Quiet.  Suppress diagnostic messages.
 Enable terminal control keys. This is enabled automatically if a terminal is detected.
 By default use 's' or the space bar to stop/restart (pause, unpause) playback, 'f' to jump forward to the next song, 'b' to jump back to the
 beginning of the song, ',' to rewind, '.' to fast forward, and 'q' to quit.
-Type 'h' for a full list of available controls.
+Type 'h' for a full list of available controls. The A-B loop feature with key 'o' changes the preset loop interval to the interval
+between two presses of 'o', the third press (or 'p') ending the looped playback. The key 'p' will use the updated loop interval after that.
 .TP
 \fB\-\^\-no\-control
 Disable terminal control even if terminal is detected.
@@ -422,8 +423,8 @@ In an xterm, rxvt, screen, iris-ansi (compatible, TERM environment variable is e
 playing.
 .TP
 \fB\-\^\-pauseloop \fIseconds
-Set the length of the loop interval in terminal control paused mode, away from the default of 0.5 seconds, as a floating
-point number.
+Set the length of the loop interval in terminal control fixed looping mode, away from the default of 0.5 seconds, as a floating
+point number. This value can be overwritten at runtime using the A-B loop feature.
 .TP
 \fB\-\^\-name \fIname
 Set the name of this instance, possibly used in various places. This sets the client name for JACK output.
