@@ -1,7 +1,7 @@
 /*
 	common: anything can happen here... frame reading, output, messages
 
-	copyright ?-2020 by the mpg123 project - free software under the terms of the LGPL 2.1
+	copyright ?-2022 by the mpg123 project - free software under the terms of the LGPL 2.1
 	see COPYING and AUTHORS files in distribution or http://mpg123.org
 	initially written by Michael Hipp
 */
@@ -12,8 +12,13 @@
 #include "mpg123app.h"
 #include "out123.h"
 
-extern int stopped;
-extern int paused;
+enum player_state
+{
+	STATE_PLAYING=0
+,	STATE_STOPPED, STATE_LOOPING, STATE_AB
+,	STATE_COUNT
+};
+extern enum player_state playstate;
 extern int muted;
 
 void print_header(mpg123_handle *);
