@@ -9,7 +9,10 @@ TODO: fix up position calculations with syn123 resampling, drop 2to1, 4to1 decod
    correct one is included (at least gcc picks the one in the same directory as the
    including header first).
 -- TODO: make headers build-independent (some lfs aliasing for non-sensitive)
-- mpg123: added --libversion
+- mpg123:
+-- Added --libversion.
+-- Added proper A-B looping with terminal control key 'o', renamed
+   --pauseloop to --presetloop.
 - libmpg123, libout123, libsyn123: bumped API version for version query
   functions
 - libout123:
